# camera_lidar_fusion

./: .gitignore  README.md
nuScenes_fusion/: .gitignore  INSTALL.md  README.md  data_fuser.py  main.py  nuscenes_data_loader.py
nuScenes_fusion/detectors/: img_obj_detector.py  obj_detector.py  pc_obj_detector.py
nuScenes_fusion/utils/: draw_utils.py  fusion_utils.py  object_desciption_util.py  projection_utils.py
ros_fusion/: INSTALL.md  README.md  config.yaml
ros_fusion/src/camera_lidar_fusion/: package.xml  setup.py
ros_fusion/src/camera_lidar_fusion/camera_lidar_fusion/: camera.py  camera_publisher.py  client.py  data_fuser.py  lidar_publisher.py  server.py
ros_fusion/src/camera_lidar_fusion/camera_lidar_fusion/detectors/: img_obj_detector.py  obj_detector.py  pc_obj_detector.py
ros_fusion/src/camera_lidar_fusion/camera_lidar_fusion/gigev_common/: gigev.py  pygigev.py
ros_fusion/src/camera_lidar_fusion/camera_lidar_fusion/utils/: draw_utils.py  fusion_utils.py  object_desciption_util.py  projection_utils.py
ros_fusion/src/interfaces/: CMakeLists.txt  package.xml
ros_fusion/src/interfaces/msg/: CameraData.msg  LidarData.msg  SyncData.msg
ros_fusion/src/launch_fusion/: CMakeLists.txt  package.xml
ros_fusion/src/launch_fusion/launch_fusion/: launch.py
